add notes package

--- a/app/index.jade
+++ b/app/index.jade
@@ -2,8 +2,9 @@ doctype html
 html
    head
       link(rel="stylesheet" href="styles/spa.min.css")
+      title SPA Example
    body(ng-app="spa")
-      #main.container
+      #main.container         
          #app-view(ui-view)
    script(type="text/javascript", src="scripts/vendors.js")
    script(type="text/javascript", src="scripts/spa.bundle.js")
