--- a/app/landing/landing.jade
+++ b/app/landing/landing.jade
@@ -1,3 +1,5 @@
 #landing
    h1(ng-bind="landing.heading")
-   a(ui-sref="todos") Go to my To-Do list
+   ul 
+      li: a(ui-sref="todos") Go to my To-Do list
+      li: a(ui-sref="notes") Go to notes
