minify sass option

--- a/app/notes/directives/notes-directive-list-items.jade
+++ b/app/notes/directives/notes-directive-list-items.jade
@@ -1,6 +1,7 @@
-p TESTANDO
-ul
-	li item 01
-	li item 02
-	li item 03
-	li item 04
+#notes-directive-list-item
+    p TESTANDO
+    ul
+        li item 01
+        li item 02
+        li item 03
+        li item 04
