add gulp template cache

--- a/app/index.jade
+++ b/app/index.jade
@@ -6,5 +6,7 @@ html
    body(ng-app="spa")
       #main.container         
          #app-view(ui-view)
+
    script(type="text/javascript", src="scripts/vendors.js")
+   script(type="text/javascript", src="views/templates.js")
    script(type="text/javascript", src="scripts/spa.bundle.js")
